--- a/V2rayU/Base.lproj/Menu.xib
+++ b/V2rayU/Base.lproj/Menu.xib
@@ -11,7 +11,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="V2rayU" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target">
             <connections>
                 <outlet property="serverItems" destination="cio-ej-HL5" id="VhP-6X-4cc"/>
                 <outlet property="stateMenu" destination="9n3-TW-9ur" id="Vkj-Ge-f59"/>
