--- a/V2rayU/Base.lproj/Menu.xib
+++ b/V2rayU/Base.lproj/Menu.xib
@@ -11,30 +11,47 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target">
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="V2rayU" customModuleProvider="target">
             <connections>
-                <outlet property="serverItems" destination="cio-ej-HL5" id="VhP-6X-4cc"/>
-                <outlet property="stateMenu" destination="9n3-TW-9ur" id="Vkj-Ge-f59"/>
+                <outlet property="statusMenu" destination="9n3-TW-9ur" id="RLL-Ev-lPF"/>
             </connections>
         </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
+        <customObject id="hcZ-V7-Dui" userLabel="MenuController" customClass="MenuController" customModule="V2rayU" customModuleProvider="target">
+            <connections>
+                <outlet property="serverItems" destination="cio-ej-HL5" id="0Z8-41-eCi"/>
+                <outlet property="statusMenu" destination="9n3-TW-9ur" id="Hgg-sa-fM8"/>
+            </connections>
+        </customObject>
         <menu title="load" id="9n3-TW-9ur" userLabel="stateMenu">
             <items>
-                <menuItem title="Start" id="SML-EF-rdT" userLabel="Start">
+                <menuItem title="Start V2rayCore" state="on" id="SML-EF-rdT" userLabel="Turn v2ray-core On">
                     <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="start:" target="hcZ-V7-Dui" id="XIR-lL-vV2"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Start at Login" state="on" id="W8C-IS-e0J">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="toggleStartAtLogin:" target="hcZ-V7-Dui" id="6Ud-Oq-hlt"/>
+                    </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="EF9-7H-2Xy"/>
                 <menuItem title="Config" id="GqB-HP-8ns">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="openConfig:" target="Voe-Tx-rLC" id="gIr-30-Wl6"/>
+                        <action selector="openConfig:" target="hcZ-V7-Dui" id="2ur-ix-0ZF"/>
                     </connections>
                 </menuItem>
                 <menuItem title="Logs" id="eLc-0G-7He">
                     <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="openLogs:" target="hcZ-V7-Dui" id="bGW-eH-KTP"/>
+                    </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="zsh-Mj-59b"/>
-                <menuItem title="Server" id="cio-ej-HL5">
+                <menuItem title="Server" id="cio-ej-HL5" userLabel="ServerItems">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Server" id="NCx-DY-Hm4"/>
                 </menuItem>
@@ -42,23 +59,23 @@
                 <menuItem title="Help" id="YoX-II-o27" userLabel="Help">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="openHelp:" target="Voe-Tx-rLC" id="HHr-m6-jeV"/>
+                        <action selector="openHelp:" target="hcZ-V7-Dui" id="Bwq-Yj-2xm"/>
                     </connections>
                 </menuItem>
                 <menuItem title="About" id="mkZ-vI-Lc2">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
-                        <action selector="openAbout:" target="Voe-Tx-rLC" id="BXd-I1-Rc4"/>
+                        <action selector="openAbout:" target="hcZ-V7-Dui" id="Zo8-33-SZQ"/>
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="JSk-ds-GrJ"/>
                 <menuItem title="Quit" keyEquivalent="q" id="28U-8z-8lS" userLabel="Quit">
                     <connections>
-                        <action selector="quitClicked:" target="Voe-Tx-rLC" id="XuU-xE-8GB"/>
+                        <action selector="quitClicked:" target="hcZ-V7-Dui" id="eyG-94-Avh"/>
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="-276" y="48"/>
+            <point key="canvasLocation" x="-553" y="42"/>
         </menu>
     </objects>
 </document>
